# homework-damianomuzzolon

./: CMakeLists.txt  README.md
File_miei/: Auto.cpp  Date.cpp  Date.h  Park1.cpp  Park1.h  Test_auto.cpp
Include/: Auto.h  Date.h  Park.h  Park1.h  Park2.h
Src/: Auto.cpp  CMakeLists.txt  Date.cpp  Park.cpp  Park1.cpp  Park2.cpp  main.cpp
input_files/: input_example.txt  parcheggioDueIngresso.txt  parcheggioDueUscita.txt  parcheggioUnoIngresso.txt  parcheggioUnoUscita.txt
tests/: reading_from_file  reading_from_file.cpp
